// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductsRepository > countProductsByCategory > returns product counts grouped by category 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "product_count": 5n,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "product_count": 4n,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "product_count": 4n,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "product_count": 4n,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "None",
    },
    "product_count": 1n,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Test",
    },
    "product_count": 1n,
  },
]
`;

exports[`ProductsRepository > getLowStockProducts > returns products with low stock 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "None",
    },
    "id": 22,
    "name": "Minimal Product",
    "sku": "NEW-002",
    "stock_quantity": 10,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "id": 11,
    "name": "Coffee Maker",
    "sku": "HOME-001",
    "stock_quantity": 25,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "id": 3,
    "name": "Mechanical Keyboard",
    "sku": "ELEC-003",
    "stock_quantity": 30,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "id": 8,
    "name": "Winter Jacket",
    "sku": "CLTH-003",
    "stock_quantity": 40,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "id": 15,
    "name": "Garden Hose",
    "sku": "HOME-005",
    "stock_quantity": 45,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "id": 1,
    "name": "Updated Wireless Headphones",
    "sku": "ELEC-001-UPD",
    "stock_quantity": 45,
  },
]
`;

exports[`ProductsRepository > getProduct > returns product when found 1`] = `
{
  "category": {
    "_id": "Option",
    "_tag": "Some",
    "value": "Electronics",
  },
  "created_at": 2024-01-01T08:00:00.000Z,
  "description": {
    "_id": "Option",
    "_tag": "Some",
    "value": "Premium noise-canceling wireless headphones with 30-hour battery life",
  },
  "id": 1,
  "is_active": true,
  "name": "Wireless Headphones",
  "price_cents": 14999,
  "sku": "ELEC-001",
  "stock_quantity": 50,
  "updated_at": 2024-01-01T08:00:00.000Z,
}
`;

exports[`ProductsRepository > getProductBySku > returns product when found by SKU 1`] = `
{
  "category": {
    "_id": "Option",
    "_tag": "Some",
    "value": "Electronics",
  },
  "created_at": 2024-01-01T08:00:00.000Z,
  "description": {
    "_id": "Option",
    "_tag": "Some",
    "value": "Premium noise-canceling wireless headphones with 30-hour battery life",
  },
  "id": 1,
  "is_active": true,
  "name": "Wireless Headphones",
  "price_cents": 14999,
  "sku": "ELEC-001",
  "stock_quantity": 50,
  "updated_at": 2024-01-01T08:00:00.000Z,
}
`;

exports[`ProductsRepository > listActiveProducts > returns only active products 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Writing maintainable and readable code",
    },
    "id": 19,
    "is_active": true,
    "name": "Clean Code",
    "price_cents": 4999,
    "sku": "BOOK-004",
    "stock_quantity": 85,
    "updated_at": 2024-01-04T11:15:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Programmable 12-cup coffee maker with thermal carafe",
    },
    "id": 11,
    "is_active": true,
    "name": "Coffee Maker",
    "price_cents": 7999,
    "sku": "HOME-001",
    "stock_quantity": 25,
    "updated_at": 2024-01-03T10:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Comfortable 100% cotton t-shirt in various colors",
    },
    "id": 6,
    "is_active": true,
    "name": "Cotton T-Shirt",
    "price_cents": 1999,
    "sku": "CLTH-001",
    "stock_quantity": 200,
    "updated_at": 2024-01-02T09:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Principles of relational database design",
    },
    "id": 18,
    "is_active": true,
    "name": "Database Design",
    "price_cents": 5499,
    "sku": "BOOK-003",
    "stock_quantity": 50,
    "updated_at": 2024-01-04T11:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Classic fit denim jeans with stretch fabric",
    },
    "id": 7,
    "is_active": true,
    "name": "Denim Jeans",
    "price_cents": 4999,
    "sku": "CLTH-002",
    "stock_quantity": 80,
    "updated_at": 2024-01-02T09:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Functional programming with Effect in TypeScript",
    },
    "id": 17,
    "is_active": true,
    "name": "Effect Programming",
    "price_cents": 4499,
    "sku": "BOOK-002",
    "stock_quantity": 75,
    "updated_at": 2024-01-04T11:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:20:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Expandable garden hose with spray nozzle",
    },
    "id": 15,
    "is_active": true,
    "name": "Garden Hose",
    "price_cents": 3999,
    "sku": "HOME-005",
    "stock_quantity": 45,
    "updated_at": 2024-01-03T10:20:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Adjustable LED desk lamp with USB charging port",
    },
    "id": 13,
    "is_active": true,
    "name": "LED Desk Lamp",
    "price_cents": 3499,
    "sku": "HOME-003",
    "stock_quantity": 90,
    "updated_at": 2024-01-03T10:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "RGB mechanical gaming keyboard with Cherry MX switches",
    },
    "id": 3,
    "is_active": true,
    "name": "Mechanical Keyboard",
    "price_cents": 12999,
    "sku": "ELEC-003",
    "stock_quantity": 30,
    "updated_at": 2024-01-01T08:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Set of 3 ceramic plant pots in various sizes",
    },
    "id": 12,
    "is_active": true,
    "name": "Plant Pot Set",
    "price_cents": 2999,
    "sku": "HOME-002",
    "stock_quantity": 150,
    "updated_at": 2024-01-03T10:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Lightweight running shoes with cushioned sole",
    },
    "id": 9,
    "is_active": true,
    "name": "Running Shoes",
    "price_cents": 7999,
    "sku": "CLTH-004",
    "stock_quantity": 60,
    "updated_at": 2024-01-02T09:15:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Soft fleece throw blanket 50x60 inches",
    },
    "id": 14,
    "is_active": true,
    "name": "Throw Blanket",
    "price_cents": 2499,
    "sku": "HOME-004",
    "stock_quantity": 120,
    "updated_at": 2024-01-03T10:15:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Comprehensive guide to TypeScript programming",
    },
    "id": 16,
    "is_active": true,
    "name": "TypeScript Handbook",
    "price_cents": 3999,
    "sku": "BOOK-001",
    "stock_quantity": 100,
    "updated_at": 2024-01-04T11:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Multi-port USB-C hub with HDMI, USB-A, and SD card reader",
    },
    "id": 2,
    "is_active": true,
    "name": "USB-C Hub",
    "price_cents": 4999,
    "sku": "ELEC-002",
    "stock_quantity": 100,
    "updated_at": 2024-01-01T08:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Insulated winter jacket with water-resistant exterior",
    },
    "id": 8,
    "is_active": true,
    "name": "Winter Jacket",
    "price_cents": 9999,
    "sku": "CLTH-003",
    "stock_quantity": 40,
    "updated_at": 2024-01-02T09:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Premium noise-canceling wireless headphones with 30-hour battery life",
    },
    "id": 1,
    "is_active": true,
    "name": "Wireless Headphones",
    "price_cents": 14999,
    "sku": "ELEC-001",
    "stock_quantity": 50,
    "updated_at": 2024-01-01T08:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Ergonomic wireless mouse with adjustable DPI",
    },
    "id": 4,
    "is_active": true,
    "name": "Wireless Mouse",
    "price_cents": 3999,
    "sku": "ELEC-004",
    "stock_quantity": 75,
    "updated_at": 2024-01-01T08:15:00.000Z,
  },
]
`;

exports[`ProductsRepository > listProducts > returns all products ordered by name 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Writing maintainable and readable code",
    },
    "id": 19,
    "is_active": true,
    "name": "Clean Code",
    "price_cents": 4999,
    "sku": "BOOK-004",
    "stock_quantity": 85,
    "updated_at": 2024-01-04T11:15:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Programmable 12-cup coffee maker with thermal carafe",
    },
    "id": 11,
    "is_active": true,
    "name": "Coffee Maker",
    "price_cents": 7999,
    "sku": "HOME-001",
    "stock_quantity": 25,
    "updated_at": 2024-01-03T10:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Comfortable 100% cotton t-shirt in various colors",
    },
    "id": 6,
    "is_active": true,
    "name": "Cotton T-Shirt",
    "price_cents": 1999,
    "sku": "CLTH-001",
    "stock_quantity": 200,
    "updated_at": 2024-01-02T09:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Principles of relational database design",
    },
    "id": 18,
    "is_active": true,
    "name": "Database Design",
    "price_cents": 5499,
    "sku": "BOOK-003",
    "stock_quantity": 50,
    "updated_at": 2024-01-04T11:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Classic fit denim jeans with stretch fabric",
    },
    "id": 7,
    "is_active": true,
    "name": "Denim Jeans",
    "price_cents": 4999,
    "sku": "CLTH-002",
    "stock_quantity": 80,
    "updated_at": 2024-01-02T09:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Functional programming with Effect in TypeScript",
    },
    "id": 17,
    "is_active": true,
    "name": "Effect Programming",
    "price_cents": 4499,
    "sku": "BOOK-002",
    "stock_quantity": 75,
    "updated_at": 2024-01-04T11:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:20:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Expandable garden hose with spray nozzle",
    },
    "id": 15,
    "is_active": true,
    "name": "Garden Hose",
    "price_cents": 3999,
    "sku": "HOME-005",
    "stock_quantity": 45,
    "updated_at": 2024-01-03T10:20:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Adjustable LED desk lamp with USB charging port",
    },
    "id": 13,
    "is_active": true,
    "name": "LED Desk Lamp",
    "price_cents": 3499,
    "sku": "HOME-003",
    "stock_quantity": 90,
    "updated_at": 2024-01-03T10:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "RGB mechanical gaming keyboard with Cherry MX switches",
    },
    "id": 3,
    "is_active": true,
    "name": "Mechanical Keyboard",
    "price_cents": 12999,
    "sku": "ELEC-003",
    "stock_quantity": 30,
    "updated_at": 2024-01-01T08:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:20:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Outdated JavaScript reference",
    },
    "id": 20,
    "is_active": false,
    "name": "Old JavaScript Book",
    "price_cents": 1999,
    "sku": "BOOK-005",
    "stock_quantity": 3,
    "updated_at": 2024-01-04T11:20:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:20:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Discontinued MP3 player",
    },
    "id": 5,
    "is_active": false,
    "name": "Old MP3 Player",
    "price_cents": 2999,
    "sku": "ELEC-005",
    "stock_quantity": 5,
    "updated_at": 2024-01-01T08:20:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Set of 3 ceramic plant pots in various sizes",
    },
    "id": 12,
    "is_active": true,
    "name": "Plant Pot Set",
    "price_cents": 2999,
    "sku": "HOME-002",
    "stock_quantity": 150,
    "updated_at": 2024-01-03T10:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Lightweight running shoes with cushioned sole",
    },
    "id": 9,
    "is_active": true,
    "name": "Running Shoes",
    "price_cents": 7999,
    "sku": "CLTH-004",
    "stock_quantity": 60,
    "updated_at": 2024-01-02T09:15:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:20:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Seasonal summer shorts - clearance",
    },
    "id": 10,
    "is_active": false,
    "name": "Summer Shorts",
    "price_cents": 1499,
    "sku": "CLTH-005",
    "stock_quantity": 10,
    "updated_at": 2024-01-02T09:20:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Soft fleece throw blanket 50x60 inches",
    },
    "id": 14,
    "is_active": true,
    "name": "Throw Blanket",
    "price_cents": 2499,
    "sku": "HOME-004",
    "stock_quantity": 120,
    "updated_at": 2024-01-03T10:15:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Comprehensive guide to TypeScript programming",
    },
    "id": 16,
    "is_active": true,
    "name": "TypeScript Handbook",
    "price_cents": 3999,
    "sku": "BOOK-001",
    "stock_quantity": 100,
    "updated_at": 2024-01-04T11:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Multi-port USB-C hub with HDMI, USB-A, and SD card reader",
    },
    "id": 2,
    "is_active": true,
    "name": "USB-C Hub",
    "price_cents": 4999,
    "sku": "ELEC-002",
    "stock_quantity": 100,
    "updated_at": 2024-01-01T08:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Insulated winter jacket with water-resistant exterior",
    },
    "id": 8,
    "is_active": true,
    "name": "Winter Jacket",
    "price_cents": 9999,
    "sku": "CLTH-003",
    "stock_quantity": 40,
    "updated_at": 2024-01-02T09:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Premium noise-canceling wireless headphones with 30-hour battery life",
    },
    "id": 1,
    "is_active": true,
    "name": "Wireless Headphones",
    "price_cents": 14999,
    "sku": "ELEC-001",
    "stock_quantity": 50,
    "updated_at": 2024-01-01T08:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Ergonomic wireless mouse with adjustable DPI",
    },
    "id": 4,
    "is_active": true,
    "name": "Wireless Mouse",
    "price_cents": 3999,
    "sku": "ELEC-004",
    "stock_quantity": 75,
    "updated_at": 2024-01-01T08:15:00.000Z,
  },
]
`;

exports[`ProductsRepository > listProductsByCategory > returns products in Books category 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Writing maintainable and readable code",
    },
    "id": 19,
    "is_active": true,
    "name": "Clean Code",
    "price_cents": 4999,
    "sku": "BOOK-004",
    "stock_quantity": 85,
    "updated_at": 2024-01-04T11:15:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Principles of relational database design",
    },
    "id": 18,
    "is_active": true,
    "name": "Database Design",
    "price_cents": 5499,
    "sku": "BOOK-003",
    "stock_quantity": 50,
    "updated_at": 2024-01-04T11:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Functional programming with Effect in TypeScript",
    },
    "id": 17,
    "is_active": true,
    "name": "Effect Programming",
    "price_cents": 4499,
    "sku": "BOOK-002",
    "stock_quantity": 75,
    "updated_at": 2024-01-04T11:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Comprehensive guide to TypeScript programming",
    },
    "id": 16,
    "is_active": true,
    "name": "TypeScript Handbook",
    "price_cents": 3999,
    "sku": "BOOK-001",
    "stock_quantity": 100,
    "updated_at": 2024-01-04T11:00:00.000Z,
  },
]
`;

exports[`ProductsRepository > listProductsByCategory > returns products in Electronics category 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "RGB mechanical gaming keyboard with Cherry MX switches",
    },
    "id": 3,
    "is_active": true,
    "name": "Mechanical Keyboard",
    "price_cents": 12999,
    "sku": "ELEC-003",
    "stock_quantity": 30,
    "updated_at": 2024-01-01T08:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Multi-port USB-C hub with HDMI, USB-A, and SD card reader",
    },
    "id": 2,
    "is_active": true,
    "name": "USB-C Hub",
    "price_cents": 4999,
    "sku": "ELEC-002",
    "stock_quantity": 100,
    "updated_at": 2024-01-01T08:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Premium noise-canceling wireless headphones with 30-hour battery life",
    },
    "id": 1,
    "is_active": true,
    "name": "Wireless Headphones",
    "price_cents": 14999,
    "sku": "ELEC-001",
    "stock_quantity": 50,
    "updated_at": 2024-01-01T08:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "created_at": 2024-01-01T08:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Ergonomic wireless mouse with adjustable DPI",
    },
    "id": 4,
    "is_active": true,
    "name": "Wireless Mouse",
    "price_cents": 3999,
    "sku": "ELEC-004",
    "stock_quantity": 75,
    "updated_at": 2024-01-01T08:15:00.000Z,
  },
]
`;

exports[`ProductsRepository > listProductsCursor > returns products after cursor ID 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Comfortable 100% cotton t-shirt in various colors",
    },
    "id": 6,
    "is_active": true,
    "name": "Cotton T-Shirt",
    "price_cents": 1999,
    "sku": "CLTH-001",
    "stock_quantity": 200,
    "updated_at": 2024-01-02T09:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Classic fit denim jeans with stretch fabric",
    },
    "id": 7,
    "is_active": true,
    "name": "Denim Jeans",
    "price_cents": 4999,
    "sku": "CLTH-002",
    "stock_quantity": 80,
    "updated_at": 2024-01-02T09:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Insulated winter jacket with water-resistant exterior",
    },
    "id": 8,
    "is_active": true,
    "name": "Winter Jacket",
    "price_cents": 9999,
    "sku": "CLTH-003",
    "stock_quantity": 40,
    "updated_at": 2024-01-02T09:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Lightweight running shoes with cushioned sole",
    },
    "id": 9,
    "is_active": true,
    "name": "Running Shoes",
    "price_cents": 7999,
    "sku": "CLTH-004",
    "stock_quantity": 60,
    "updated_at": 2024-01-02T09:15:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Programmable 12-cup coffee maker with thermal carafe",
    },
    "id": 11,
    "is_active": true,
    "name": "Coffee Maker",
    "price_cents": 7999,
    "sku": "HOME-001",
    "stock_quantity": 25,
    "updated_at": 2024-01-03T10:00:00.000Z,
  },
]
`;

exports[`ProductsRepository > listProductsPaginated > returns paginated active products - first page 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Writing maintainable and readable code",
    },
    "id": 19,
    "is_active": true,
    "name": "Clean Code",
    "price_cents": 4999,
    "sku": "BOOK-004",
    "stock_quantity": 85,
    "updated_at": 2024-01-04T11:15:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Principles of relational database design",
    },
    "id": 18,
    "is_active": true,
    "name": "Database Design",
    "price_cents": 5499,
    "sku": "BOOK-003",
    "stock_quantity": 50,
    "updated_at": 2024-01-04T11:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Functional programming with Effect in TypeScript",
    },
    "id": 17,
    "is_active": true,
    "name": "Effect Programming",
    "price_cents": 4499,
    "sku": "BOOK-002",
    "stock_quantity": 75,
    "updated_at": 2024-01-04T11:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Books",
    },
    "created_at": 2024-01-04T11:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Comprehensive guide to TypeScript programming",
    },
    "id": 16,
    "is_active": true,
    "name": "TypeScript Handbook",
    "price_cents": 3999,
    "sku": "BOOK-001",
    "stock_quantity": 100,
    "updated_at": 2024-01-04T11:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:20:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Expandable garden hose with spray nozzle",
    },
    "id": 15,
    "is_active": true,
    "name": "Garden Hose",
    "price_cents": 3999,
    "sku": "HOME-005",
    "stock_quantity": 45,
    "updated_at": 2024-01-03T10:20:00.000Z,
  },
]
`;

exports[`ProductsRepository > listProductsPaginated > returns paginated active products - second page 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Soft fleece throw blanket 50x60 inches",
    },
    "id": 14,
    "is_active": true,
    "name": "Throw Blanket",
    "price_cents": 2499,
    "sku": "HOME-004",
    "stock_quantity": 120,
    "updated_at": 2024-01-03T10:15:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:10:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Adjustable LED desk lamp with USB charging port",
    },
    "id": 13,
    "is_active": true,
    "name": "LED Desk Lamp",
    "price_cents": 3499,
    "sku": "HOME-003",
    "stock_quantity": 90,
    "updated_at": 2024-01-03T10:10:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:05:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Set of 3 ceramic plant pots in various sizes",
    },
    "id": 12,
    "is_active": true,
    "name": "Plant Pot Set",
    "price_cents": 2999,
    "sku": "HOME-002",
    "stock_quantity": 150,
    "updated_at": 2024-01-03T10:05:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "created_at": 2024-01-03T10:00:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Programmable 12-cup coffee maker with thermal carafe",
    },
    "id": 11,
    "is_active": true,
    "name": "Coffee Maker",
    "price_cents": 7999,
    "sku": "HOME-001",
    "stock_quantity": 25,
    "updated_at": 2024-01-03T10:00:00.000Z,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "created_at": 2024-01-02T09:15:00.000Z,
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Lightweight running shoes with cushioned sole",
    },
    "id": 9,
    "is_active": true,
    "name": "Running Shoes",
    "price_cents": 7999,
    "sku": "CLTH-004",
    "stock_quantity": 60,
    "updated_at": 2024-01-02T09:15:00.000Z,
  },
]
`;

exports[`ProductsRepository > searchProducts > finds products matching search term 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "RGB mechanical gaming keyboard with Cherry MX switches",
    },
    "id": 3,
    "name": "Mechanical Keyboard",
    "price_cents": 12999,
    "sku": "ELEC-003",
    "stock_quantity": 30,
  },
]
`;

exports[`ProductsRepository > searchProducts > finds products with category in search 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "RGB mechanical gaming keyboard with Cherry MX switches",
    },
    "id": 3,
    "name": "Mechanical Keyboard",
    "price_cents": 12999,
    "sku": "ELEC-003",
    "stock_quantity": 30,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Multi-port USB-C hub with HDMI, USB-A, and SD card reader",
    },
    "id": 2,
    "name": "USB-C Hub",
    "price_cents": 4999,
    "sku": "ELEC-002",
    "stock_quantity": 100,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Premium noise-canceling wireless headphones with 30-hour battery life",
    },
    "id": 1,
    "name": "Wireless Headphones",
    "price_cents": 14999,
    "sku": "ELEC-001",
    "stock_quantity": 50,
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Ergonomic wireless mouse with adjustable DPI",
    },
    "id": 4,
    "name": "Wireless Mouse",
    "price_cents": 3999,
    "sku": "ELEC-004",
    "stock_quantity": 75,
  },
]
`;

exports[`ProductsRepository > searchProductsRanked > returns ranked search results with pagination 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Clothing",
    },
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Comfortable 100% cotton t-shirt in various colors",
    },
    "id": 6,
    "name": "Cotton T-Shirt",
    "price_cents": 1999,
    "rank": 0.075990885,
    "sku": "CLTH-001",
    "stock_quantity": 200,
  },
]
`;

exports[`ProductsRepository > searchProductsWebStyle > searches with web-style query syntax 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Home & Garden",
    },
    "description": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Programmable 12-cup coffee maker with thermal carafe",
    },
    "id": 11,
    "name": "Coffee Maker",
    "price_cents": 7999,
    "sku": "HOME-001",
  },
]
`;

exports[`ProductsRepository > searchProductsWithHighlight > returns search results with highlighted descriptions 1`] = `
[
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "highlighted_description": "Premium noise-canceling <b>wireless</b> headphones with 30-hour battery life",
    "id": 1,
    "name": "Wireless Headphones",
    "price_cents": 14999,
    "sku": "ELEC-001",
  },
  {
    "category": {
      "_id": "Option",
      "_tag": "Some",
      "value": "Electronics",
    },
    "highlighted_description": "Ergonomic <b>wireless</b> mouse with adjustable DPI",
    "id": 4,
    "name": "Wireless Mouse",
    "price_cents": 3999,
    "sku": "ELEC-004",
  },
]
`;
